<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actor_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/actor_name"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/actor_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            style="?android:attr/starStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/actor_face"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:padding="16dp"
            />

        <TextView
            android:id="@+id/actor_info"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="0.88"
            android:scrollbars="vertical"
            android:text="@string/description" />

    </LinearLayout>

    <View style="@style/Divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/divider_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/divider_show"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/divider_show_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_centerInParent="true"
            android:text="@string/divider_character"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View style="@style/Divider"/>


</LinearLayout>